--- a/lab1(Encryption).csproj
+++ b/lab1(Encryption).csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\BitCryptographer.cs" />
+    <Compile Include="Classes\Cryptographer.cs" />
+    <Compile Include="Classes\ICryptographer.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
