--- a/lab1(Encryption).csproj
+++ b/lab1(Encryption).csproj
@@ -67,6 +67,9 @@
     <Compile Include="Forms\CryptographerControl.Designer.cs">
       <DependentUpon>CryptographerControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\KeyCryptographerControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControl1.cs">
@@ -86,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\CryptographerControl.resx">
       <DependentUpon>CryptographerControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\KeyCryptographerControl.resx">
+      <DependentUpon>KeyCryptographerControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
