--- a/lab1(Encryption).csproj
+++ b/lab1(Encryption).csproj
@@ -50,6 +50,7 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Classes\BitCryptographer.cs" />
+    <Compile Include="Classes\DESCryptographer.cs" />
     <Compile Include="Classes\ICryptographer.cs" />
     <Compile Include="Classes\KeyCryptographer.cs" />
     <Compile Include="Form1.cs">
