--- a/lab1(Encryption).csproj
+++ b/lab1(Encryption).csproj
@@ -50,7 +50,7 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Classes\BitCryptographer.cs" />
-    <Compile Include="Classes\DESCryptographer.cs" />
+    <Compile Include="Classes\GOSTCryptographer.cs" />
     <Compile Include="Classes\ICryptographer.cs" />
     <Compile Include="Classes\KeyCryptographer.cs" />
     <Compile Include="Form1.cs">
@@ -67,6 +67,9 @@
     </Compile>
     <Compile Include="Forms\CryptographerControl.Designer.cs">
       <DependentUpon>CryptographerControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\GOSTCryptographerControl.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Forms\KeyCryptographerControl.cs">
       <SubType>UserControl</SubType>
