--- a/lab1(Encryption).csproj
+++ b/lab1(Encryption).csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,6 +54,7 @@
     <Compile Include="Classes\GOSTCryptographer.cs" />
     <Compile Include="Classes\ICryptographer.cs" />
     <Compile Include="Classes\KeyCryptographer.cs" />
+    <Compile Include="Classes\RSACryptographer.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
