--- a/lab1(Encryption).csproj
+++ b/lab1(Encryption).csproj
@@ -76,6 +76,9 @@
     <Compile Include="Forms\KeyCryptographerControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Forms\RSACryptographerControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControl1.cs">
@@ -98,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\KeyCryptographerControl.resx">
       <DependentUpon>KeyCryptographerControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\RSACryptographerControl.resx">
+      <DependentUpon>RSACryptographerControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
